pytest를 사용하지 않도록 수정함.

--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -22,7 +22,6 @@ jobs:
       run: |
         # conda env update --file environment.yml --name base
         echo "dependencies install skip."
-    - name: Test with pytest
+    - name: Test main code
       run: |
-        conda install pytest
-        pytest action_test.py
+        python action_test.py
